# Luna

./: .gitignore  LICENSE.md  README.md  luna.toml  pyproject.toml  requirements.txt
config/: kill_password.hash
dashboard/: LICENSE  package.json  tailwind.config.js  vite.config.ts
docs/: ECOSYSTEM_SNAPSHOT.md  FOUNDERS_MEMO.md  FOUNDING_EPISODES.md  GETTING_STARTED.md  HISTORICAL_FRAMEWORK_v1.md  LUNA_CONSTITUTION.md  LUNA_DREAM_SIMULATION_ARCHITECTURE.md  LUNA_EMERGENCE_PLAN.md  LUNA_MATH_COMPLIANCE_AUDIT.md  LUNA_V35_PHASES_G_TO_J.md  LUNA_V35_THINKER_MATH.md  LUNA_V3_TO_V4_CONSCIOUSNESS_ARCHITECTURE.md  MATH.md  VALIDATION_PROTOCOL.md  qcm_conscience.md
luna/: __init__.py  __main__.py
scripts/: migrate_memory.py
simulations/: asymmetric_kappa_sim.py  dream_impact.py  equilibrium_identity_sim.py  generate_figures.py  single_agent_validation.py
tests/: __init__.py  conftest.py  test_5c_migration.py  test_affect.py  test_affect_dream.py  test_affect_integration.py  test_api_consciousness.py  test_api_health.py  test_api_metrics.py  test_appraisal.py  test_autonomous_journal.py  test_autonomy_ghost.py  test_autonomy_phase_b.py  test_autonomy_window.py  test_awakening.py  test_causal_graph.py  test_chat.py  test_checkpoint_persistence.py  test_cli_main.py  test_cognitive_loop.py  test_cognitive_synthesis.py  test_config.py  test_consciousness_decider.py  test_consciousness_state.py  test_context.py  test_convergence_p016.py  test_cycle_schemas.py  test_cycle_store.py  test_dream_consolidation.py  test_dream_cycle.py  test_dream_cycle_current.py  (+58 more)
(+112 files in other folders)
